# stardew-valley-sync.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
android/: build.gradle.kts  gradle.properties  pubspec.yaml  settings.gradle.kts
android/android/: settings.gradle  version.properties
android/android/app/: build.gradle
android/android/app/src/main/: AndroidManifest.xml
android/android/app/src/main/kotlin/com/stardewsync/: FileAccessBackend.kt  MainActivity.kt  SafPlugin.kt  ShizukuBackend.kt
android/android/gradle/wrapper/: gradle-wrapper.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/stardewsync/: FileAccessBackend.kt  MainActivity.kt  ManageStorageBackend.kt  ShizukuBackend.kt
android/app/src/main/kotlin/com/stardewsync/data/api/: ApiClient.kt  ConflictException.kt
android/app/src/main/kotlin/com/stardewsync/data/model/: DiscoveredServer.kt  SaveSlotInfo.kt
android/app/src/main/kotlin/com/stardewsync/data/prefs/: AppPreferences.kt
android/app/src/main/kotlin/com/stardewsync/service/: DiscoveryService.kt  FileAccessService.kt
android/app/src/main/kotlin/com/stardewsync/ui/browser/: DirectoryBrowserScreen.kt  DirectoryBrowserViewModel.kt  DirectoryBrowserViewModelFactory.kt
android/app/src/main/kotlin/com/stardewsync/ui/connect/: ServerConnectScreen.kt  ServerConnectViewModel.kt  ServerConnectViewModelFactory.kt
android/app/src/main/kotlin/com/stardewsync/ui/fileaccess/: FileAccessSettingsScreen.kt  FileAccessSettingsViewModel.kt  FileAccessSettingsViewModelFactory.kt
android/app/src/main/kotlin/com/stardewsync/ui/home/: HomeScreen.kt  HomeViewModel.kt  HomeViewModelFactory.kt
android/app/src/main/kotlin/com/stardewsync/ui/navigation/: AppNavGraph.kt
android/app/src/main/kotlin/com/stardewsync/ui/sync/: ConflictDialog.kt  SyncScreen.kt  SyncViewModel.kt  SyncViewModelFactory.kt
android/app/src/main/kotlin/com/stardewsync/ui/theme/: Theme.kt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: debug_config.dart.example  main.dart
android/lib/models/: save_slot.dart
android/lib/screens/: directory_browser.dart  file_access_settings_screen.dart  home_screen.dart  server_connect_screen.dart  sync_screen.dart
android/lib/services/: api_client.dart  discovery.dart  file_access_mode.dart  saf_service.dart
android/lib/widgets/: conflict_dialog.dart
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: auth.rs  config.rs  error.rs  main.rs  saves.rs  tray.rs
server/src/federation/: auth.rs  mod.rs  peer_discovery.rs  replicator.rs
server/src/routes/: delete.rs  download.rs  federation_push.rs  health.rs  mod.rs  saves_list.rs  upload.rs
