[package]
name    = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stardew-sync-server"
path = "src/main.rs"

[dependencies]
common      = { path = "../common" }

tokio            = { version = "1",    features = ["full"] }
axum             = { version = "0.8" }
tower            = { version = "0.5" }
tower-http       = { version = "0.6",  features = ["trace", "cors", "limit"] }
serde            = { version = "1",    features = ["derive"] }
serde_json       = "1"
zip              = "2"
tokio-util       = { version = "0.7",  features = ["io"] }
bytes            = "1"
anyhow           = "1"
thiserror        = "2"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap             = { version = "4",    features = ["derive"] }
subtle           = "2"
mdns-sd          = "0.11"
dirs             = "6"
tempfile         = "3"
regex            = "1"
hostname         = "0.4"
