[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stardew-sync-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8" }
bytes = "1"
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
dirs = "6"
filetime = "0.2"
hostname = "0.4"
mdns-sd = "0.11"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "2"
