[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stardew-sync-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8" }
bytes = "1"
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
dirs = "6"
filetime = "0.2"
hostname = "0.4"
mdns-sd = "0.19"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "1"
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "8"

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon  = "0.20"
image      = { version = "0.25", default-features = false, features = ["png"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
